--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -26,9 +26,9 @@
     </header>
     <!-- Navigation Sidebar and links-->
     <nav class="menu">
-      <a href="#" class="home_menu">Home</a>
-      <a href="#" class="about_menu">Book Trip</a>
-      <a href="#" class="login_menu">Admin Login</a>
+      <a href="#" class="home">Home</a>
+      <a href="#" class="about">Book Trip</a>
+      <a href="#" class="login">Admin Login</a>
     </nav>
     <!-- Main Content -->
     <main>
